force-app/main/default/objects/Wasserij_item__c/Wasserij_item__c.object-meta.xml
<CustomObject>
    <label>Wasserij item</label>
    <nameField>
        <displayFormat>WI-{00000}</displayFormat>
        <label>Naam van Wasserij item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wasserij items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>