force-app/main/default/objects/Wasserij_item__c/fields/Aangepaste_Itemnaam__c.field-meta.xml
<CustomField>
    <fullName>Aangepaste_Itemnaam__c</fullName>
    <label>Aangepaste Itemnaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>