force-app/main/default/objects/Wasserij_item__c/fields/Aantal__c.field-meta.xml
<CustomField>
    <fullName>Aantal__c</fullName>
    <label>Aantal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>