force-app/main/default/objects/Wasserij_item__c/fields/Aantal_m__c.field-meta.xml
<CustomField>
    <fullName>Aantal_m__c</fullName>
    <formula>IF( Rond_kleed__c  = TRUE, (3.14 * ( Diameter__c / 2) * ( Diameter__c / 2))/10000 , (Lengte__c *  Breedte__c)/10000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aantal m²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>