force-app/main/default/objects/Wasserij_item__c/fields/Annuleren__c.field-meta.xml
<CustomField>
    <fullName>Annuleren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annuleren</label>
    <type>Checkbox</type>
</CustomField>