force-app/main/default/objects/Wasserij_item__c/fields/Beschrijving_del__c.field-meta.xml
<CustomField>
    <fullName>Beschrijving_del__c</fullName>
    <label>Beschrijving</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>