force-app/main/default/objects/Wasserij_item__c/fields/Breedte__c.field-meta.xml
<CustomField>
    <fullName>Breedte__c</fullName>
    <label>Breedte (cm)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>