force-app/main/default/objects/Wasserij_item__c/fields/BTW_Bedrag__c.field-meta.xml
<CustomField>
    <fullName>BTW_Bedrag__c</fullName>
    <formula>Totaal__c *  BTW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTW Bedrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>