force-app/main/default/objects/Wasserij_item__c/fields/BTW_Bedrag_Delete_Field__c.field-meta.xml
<CustomField>
    <fullName>BTW_Bedrag_Delete_Field__c</fullName>
    <description>Filled by flow
New version for Wasserij Item Calculation</description>
    <label>BTW Bedrag Delete Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>