force-app/main/default/objects/Wasserij_item__c/fields/Datum_ingepakt__c.field-meta.xml
<CustomField>
    <fullName>Datum_ingepakt__c</fullName>
    <label>Datum ingepakt</label>
    <type>Date</type>
</CustomField>