force-app/main/default/objects/Wasserij_item__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <description>Diameter in cm van een rond kleed.</description>
    <label>Diameter (cm)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>