force-app/main/default/objects/Wasserij_item__c/fields/Foto_s__c.field-meta.xml
<CustomField>
    <fullName>Foto_s__c</fullName>
    <label>Foto&apos;s</label>
    <type>Url</type>
</CustomField>