force-app/main/default/objects/Wasserij_item__c/fields/Gerelateerd_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Gerelateerd_Line_Item_Id__c</fullName>
    <description>Used to relate services to products.</description>
    <label>Gerelateerd Line Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>