force-app/main/default/objects/Wasserij_item__c/fields/Gerelateerd_Ondertapijt__c.field-meta.xml
<CustomField>
    <fullName>Gerelateerd_Ondertapijt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerelateerd Ondertapijt</label>
    <referenceTo>Wasserij_item__c</referenceTo>
    <relationshipLabel>Wasserij items (Gerelateerd Ondertapijt)</relationshipLabel>
    <relationshipName>Ondertapijt</relationshipName>
    <type>Lookup</type>
</CustomField>