force-app/main/default/objects/Wasserij_item__c/fields/Gerelateerd_Wasserij_Item__c.field-meta.xml
<CustomField>
    <fullName>Gerelateerd_Wasserij_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link services to products</description>
    <label>Gerelateerd Wasserij Item</label>
    <referenceTo>Wasserij_item__c</referenceTo>
    <relationshipLabel>Wasserij items (Gerelateerd Wasserij Item)</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>