force-app/main/default/objects/Wasserij_item__c/fields/Hoe_Kloppen__c.field-meta.xml
<CustomField>
    <fullName>Hoe_Kloppen__c</fullName>
    <label>Hoe Kloppen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Klopmachine</fullName>
                <default>true</default>
                <label>Klopmachine</label>
            </value>
            <value>
                <fullName>Klopkast</fullName>
            </value>
            <value>
                <fullName>Badger</fullName>
            </value>
            <value>
                <fullName>Luchtblazers/handmatig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>