force-app/main/default/objects/Wasserij_item__c/fields/Hoe_reinigen__c.field-meta.xml
<CustomField>
    <fullName>Hoe_reinigen__c</fullName>
    <label>Hoe Reinigen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad + Wasvloer</fullName>
            </value>
            <value>
                <fullName>Wasvloer</fullName>
            </value>
            <value>
                <fullName>Wasautomaat</fullName>
            </value>
            <value>
                <fullName>Sproei-Extractie</fullName>
            </value>
            <value>
                <fullName>Bonnet</fullName>
            </value>
            <value>
                <fullName>Anders</fullName>
            </value>
            <value>
                <fullName>Automatische Wasser</fullName>
                <isActive>false</isActive>
                <label>Automatische Wasser</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>