force-app/main/default/objects/Wasserij_item__c/fields/Inkoop_ex_BTW__c.field-meta.xml
<CustomField>
    <fullName>Inkoop_ex_BTW__c</fullName>
    <inlineHelpText>Inkoop van bijvoorbeeld tapijtreparaties of producten excl. BTW.</inlineHelpText>
    <label>Inkoop ex BTW</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>