force-app/main/default/objects/Wasserij_item__c/fields/Is_klacht__c.field-meta.xml
<CustomField>
    <fullName>Is_klacht__c</fullName>
    <formula>Werk_Order__r.Is_Klacht__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is klacht?</label>
    <type>Checkbox</type>
</CustomField>