force-app/main/default/objects/Wasserij_item__c/fields/Is_kleed__c.field-meta.xml
<CustomField>
    <fullName>Is_kleed__c</fullName>
    <formula>CONTAINS(LOWER(Product__r.Name), &quot;vloerkleed&quot;) ||
CONTAINS(LOWER(Product__r.Name), &quot;kleed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is kleed?</label>
    <type>Checkbox</type>
</CustomField>