force-app/main/default/objects/Wasserij_item__c/fields/Is_Primairy__c.field-meta.xml
<CustomField>
    <fullName>Is_Primairy__c</fullName>
    <description>Is used for filter in layout</description>
    <formula>ISBLANK(Gerelateerd_Wasserij_Item__c )</formula>
    <label>Is Primairy</label>
    <type>Checkbox</type>
</CustomField>