force-app/main/default/objects/Wasserij_item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kleed (p/m²)</fullName>
                <default>true</default>
                <label>Kleed (p/m²)</label>
            </value>
            <value>
                <fullName>Meubel (p/zitplaats)</fullName>
            </value>
            <value>
                <fullName>Kleed (wederverkoper)</fullName>
            </value>
            <value>
                <fullName>Tapijtreparatie CC</fullName>
            </value>
            <value>
                <fullName>Tapijtreparatie</fullName>
            </value>
            <value>
                <fullName>Ondertapijt</fullName>
            </value>
            <value>
                <fullName>Kussen</fullName>
            </value>
            <value>
                <fullName>Opslaghoes</fullName>
            </value>
            <value>
                <fullName>Opslag</fullName>
            </value>
            <value>
                <fullName>Afvoeren vloerkleed</fullName>
            </value>
            <value>
                <fullName>Onbehandeld retour</fullName>
            </value>
            <value>
                <fullName>Onbehandeld - zelf ophalen</fullName>
            </value>
            <value>
                <fullName>Toeslag Minimum Tarief Wederverkoper</fullName>
            </value>
            <value>
                <fullName>Stoffen Meubel</fullName>
            </value>
            <value>
                <fullName>Vast tapijt</fullName>
            </value>
            <value>
                <fullName>Matras</fullName>
            </value>
            <value>
                <fullName>Tapijt Trap</fullName>
            </value>
            <value>
                <fullName>Vlekkenbaas + Vlekkendoekje</fullName>
            </value>
            <value>
                <fullName>Vlekkenbaas</fullName>
            </value>
            <value>
                <fullName>3 witte vlekkendoekjes</fullName>
            </value>
            <value>
                <fullName>Bijrijdertoeslag</fullName>
            </value>
            <value>
                <fullName>Transportkosten</fullName>
            </value>
            <value>
                <fullName>Ophaalservice binnen (max. 20 minuten)</fullName>
            </value>
            <value>
                <fullName>Afleverservice binnen (max. 20 minuten)</fullName>
            </value>
            <value>
                <fullName>Fauteuil</fullName>
            </value>
            <value>
                <fullName>Zitbank</fullName>
            </value>
            <value>
                <fullName>Stoel</fullName>
            </value>
            <value>
                <fullName>Bureaustoel</fullName>
            </value>
            <value>
                <fullName>Vergaderstoel</fullName>
            </value>
            <value>
                <fullName>Theaterstoel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>