force-app/main/default/objects/Wasserij_item__c/fields/Klaar_voor_aflevering__c.field-meta.xml
<CustomField>
    <fullName>Klaar_voor_aflevering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Klaar voor aflevering</label>
    <type>Checkbox</type>
</CustomField>