force-app/main/default/objects/Wasserij_item__c/fields/Klaargelegd__c.field-meta.xml
<CustomField>
    <fullName>Klaargelegd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Klaargelegd</label>
    <type>Checkbox</type>
</CustomField>