force-app/main/default/objects/Wasserij_item__c/fields/Korting__c.field-meta.xml
<CustomField>
    <fullName>Korting__c</fullName>
    <inlineHelpText>Percentage korting aangeven.</inlineHelpText>
    <label>Korting %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>