force-app/main/default/objects/Wasserij_item__c/fields/Korting_bedrag__c.field-meta.xml
<CustomField>
    <fullName>Korting_bedrag__c</fullName>
    <label>Korting bedrag</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>