force-app/main/default/objects/Wasserij_item__c/fields/Kortingsbedrag_p__c.field-meta.xml
<CustomField>
    <fullName>Kortingsbedrag_p__c</fullName>
    <formula>(Totaal__c +  Toeslag_bedrag_p__c)   *  Korting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kortingsbedrag %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>