force-app/main/default/objects/Wasserij_item__c/fields/Lengte__c.field-meta.xml
<CustomField>
    <fullName>Lengte__c</fullName>
    <label>Lengte (cm)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>