force-app/main/default/objects/Wasserij_item__c/fields/Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id__c</fullName>
    <description>Used to relate items with packages and options</description>
    <label>Line Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>