force-app/main/default/objects/Wasserij_item__c/fields/Merk__c.field-meta.xml
<CustomField>
    <fullName>Merk__c</fullName>
    <label>Merk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Louis de Poortere</fullName>
            </value>
            <value>
                <fullName>Brink &amp; Campman</fullName>
            </value>
            <value>
                <fullName>Brinker</fullName>
            </value>
            <value>
                <fullName>De Munk Carpets</fullName>
            </value>
            <value>
                <fullName>Desso</fullName>
            </value>
            <value>
                <fullName>Mart Visser</fullName>
            </value>
            <value>
                <fullName>Rugvista</fullName>
            </value>
            <value>
                <fullName>Fraai</fullName>
            </value>
            <value>
                <fullName>Moooi Carpets</fullName>
            </value>
            <value>
                <fullName>HKliving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>