force-app/main/default/objects/Wasserij_item__c/fields/Minimale_Toeslag__c.field-meta.xml
<CustomField>
    <fullName>Minimale_Toeslag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Filled this is a Mini male toeslag product. This field is filled by a flow when that product is created. This field is used to exclude the product from roll up summary.</description>
    <label>Minimale Toeslag</label>
    <type>Checkbox</type>
</CustomField>