force-app/main/default/objects/Wasserij_item__c/fields/Na_foto_s_gemaakt__c.field-meta.xml
<CustomField>
    <fullName>Na_foto_s_gemaakt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Na foto&apos;s gemaakt?</label>
    <type>Checkbox</type>
</CustomField>