force-app/main/default/objects/Wasserij_item__c/fields/Niet_geschikt_voor_borstelzuiger__c.field-meta.xml
<CustomField>
    <fullName>Niet_geschikt_voor_borstelzuiger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niet geschikt voor borstelzuiger</label>
    <type>Checkbox</type>
</CustomField>