force-app/main/default/objects/Wasserij_item__c/fields/Omschrijving_SofaSaver__c.field-meta.xml
<CustomField>
    <fullName>Omschrijving_SofaSaver__c</fullName>
    <defaultValue>&quot;1 x Reinigingsmachine&quot;+BR()+
&quot;1 x Zuigslang&quot;+BR()+
&quot;1 x Drukslang&quot;+BR()+
&quot;1 x Meubel mondstuk&quot;</defaultValue>
    <label>Omschrijving SofaSaver</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>