force-app/main/default/objects/Wasserij_item__c/fields/Ondertapijt_Profilo_V__c.field-meta.xml
<CustomField>
    <fullName>Ondertapijt_Profilo_V__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ondertapijt - Profilo V</label>
    <type>Checkbox</type>
</CustomField>