force-app/main/default/objects/Wasserij_item__c/fields/Ondertapijt_Vlies_Plus__c.field-meta.xml
<CustomField>
    <fullName>Ondertapijt_Vlies_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ondertapijt - Vlies Plus</label>
    <type>Checkbox</type>
</CustomField>