force-app/main/default/objects/Wasserij_item__c/fields/Ophalen_vanaf_datum__c.field-meta.xml
<CustomField>
    <fullName>Ophalen_vanaf_datum__c</fullName>
    <formula>datevalue( Werk_Order__r.Ophalen_vanaf__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ophalen vanaf datum</label>
    <type>Date</type>
</CustomField>