force-app/main/default/objects/Wasserij_item__c/fields/Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen__c</fullName>
    <description>Kort houden - komt op de afleverbon te staan.</description>
    <inlineHelpText>Kort houden - komt op de afleverbon te staan.</inlineHelpText>
    <label>Opmerkingen overig aflevering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>