force-app/main/default/objects/Wasserij_item__c/fields/Opmerkingen_Aflevering_Combi__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Aflevering_Combi__c</fullName>
    <formula>IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Vlekken/Verkleuringen hebben extra behandeling gehad maar blijven zichtbaar.&quot; ), &quot;Vlekken/Verkleuringen hebben extra behandeling gehad maar blijven zichtbaar.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Lichte verkleuringen blijven zichtbaar.&quot; ), &quot;Lichte verkleuringen blijven zichtbaar.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Looppad heeft extra behandeling gehad maar blijft zichtbaar.&quot; ), &quot;Looppad heeft extra behandeling gehad maar blijft zichtbaar.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Slijtage blijft zichtbaar.&quot; ), &quot;Slijtage blijft zichtbaar.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Huisdierongeluk hond&quot; ), &quot;Huisdierongeluk hond; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Slijtage blijft zichtbaar&quot; ), &quot;Slijtage blijft zichtbaar; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Geur is van kleed.&quot; ), &quot;Geur is van kleed.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Geur komt van latex rug.&quot; ), &quot;Geur komt van latex rug.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Best haalbare resultaat.&quot; ), &quot;Best haalbare resultaat.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Slijtage franje blijft zichtbaar.&quot; ), &quot;Slijtage franje blijft zichtbaar.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Diep vuil kan niet verwijderd worden zonder de vezel te beschadigen.&quot; ), &quot;Diep vuil kan niet verwijderd worden zonder de vezel te beschadigen.; &quot;,null ) &amp;
IF ( INCLUDES ( Opmerkingen_voor_Aflevering__c , &quot;Uw tapijt is meerdere malen (intensief) geklopt, beste resultaat zonder de vezel of het tapijt te beschadigen.&quot; ), &quot;Uw tapijt is meerdere malen (intensief) geklopt, beste resultaat zonder de vezel of het tapijt te beschadigen.; &quot;,null ) &amp;









BR()&amp;
 








Opmerkingen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opmerkingen Aflevering Combi</label>
    <type>Text</type>
</CustomField>