force-app/main/default/objects/Wasserij_item__c/fields/Opmerkingen_overig_chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_overig_chauffeur__c</fullName>
    <label>Opmerkingen overig chauffeur</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>