force-app/main/default/objects/Wasserij_item__c/fields/Opmerkingen_voor_Aflevering__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_voor_Aflevering__c</fullName>
    <label>Opmerkingen voor Aflevering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vlekken/Verkleuringen hebben extra behandeling gehad maar blijven zichtbaar.</fullName>
            </value>
            <value>
                <fullName>Lichte verkleuringen blijven zichtbaar.</fullName>
            </value>
            <value>
                <fullName>Looppad heeft extra behandeling gehad maar blijft zichtbaar.</fullName>
            </value>
            <value>
                <fullName>Slijtage blijft zichtbaar.</fullName>
            </value>
            <value>
                <fullName>Geur is van kleed.</fullName>
            </value>
            <value>
                <fullName>Geur komt van latex rug.</fullName>
            </value>
            <value>
                <fullName>Best haalbare resultaat.</fullName>
            </value>
            <value>
                <fullName>Slijtage franje blijft zichtbaar.</fullName>
            </value>
            <value>
                <fullName>Diep vuil kan niet verwijderd worden zonder de vezel te beschadigen.</fullName>
            </value>
            <value>
                <fullName>Uw tapijt is meerdere malen (intensief) geklopt, beste resultaat zonder de vezel of het tapijt te beschadigen.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>