force-app/main/default/objects/Wasserij_item__c/fields/Prijs_excl_BTW__c.field-meta.xml
<CustomField>
    <fullName>Prijs_excl_BTW__c</fullName>
    <label>Prijs excl. BTW</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>