force-app/main/default/objects/Wasserij_item__c/fields/Prijs_m__c.field-meta.xml
<CustomField>
    <fullName>Prijs_m__c</fullName>
    <formula>Reiniging_prijs_m__c  +  Toeslag_Regio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prijs p/s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>