force-app/main/default/objects/Wasserij_item__c/fields/Priority_Werk_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Werk_Order__c</fullName>
    <formula>Werk_Order__r.Priority_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Werk Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>