force-app/main/default/objects/Wasserij_item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Wasserij items</relationshipLabel>
    <relationshipName>Wasserij_items</relationshipName>
    <type>Lookup</type>
</CustomField>