force-app/main/default/objects/Wasserij_item__c/fields/Reden_geannuleerd__c.field-meta.xml
<CustomField>
    <fullName>Reden_geannuleerd__c</fullName>
    <label>Reden geannuleerd</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Klant wil teveel garanties</fullName>
            </value>
            <value>
                <fullName>Klant vindt het te lang duren</fullName>
            </value>
            <value>
                <fullName>Kan niet gereinigd worden</fullName>
            </value>
            <value>
                <fullName>Te groot/zwaar, kon het niet meekrijgen</fullName>
            </value>
            <value>
                <fullName>Anders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>