force-app/main/default/objects/Wasserij_item__c/fields/Referentie_Klant__c.field-meta.xml
<CustomField>
    <fullName>Referentie_Klant__c</fullName>
    <label>Referentie Klant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>