force-app/main/default/objects/Wasserij_item__c/fields/Regiotoeslag__c.field-meta.xml
<CustomField>
    <fullName>Regiotoeslag__c</fullName>
    <label>Regiotoeslag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>