force-app/main/default/objects/Wasserij_item__c/fields/Reiniging_prijs_m__c.field-meta.xml
<CustomField>
    <fullName>Reiniging_prijs_m__c</fullName>
    <label>Prijs</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>