force-app/main/default/objects/Wasserij_item__c/fields/Relatieve_Prijs__c.field-meta.xml
<CustomField>
    <fullName>Relatieve_Prijs__c</fullName>
    <description>Used for related Wasserij Items to Calculate price.</description>
    <label>Relatieve Prijs %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>