force-app/main/default/objects/Wasserij_item__c/fields/Rol_Ondertapijt__c.field-meta.xml
<CustomField>
    <fullName>Rol_Ondertapijt__c</fullName>
    <label>Rol Ondertapijt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>