force-app/main/default/objects/Wasserij_item__c/fields/Rond_kleed__c.field-meta.xml
<CustomField>
    <fullName>Rond_kleed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rond kleed?</label>
    <type>Checkbox</type>
</CustomField>