force-app/main/default/objects/Wasserij_item__c/fields/Selectie_Producttype__c.field-meta.xml
<CustomField>
    <fullName>Selectie_Producttype__c</fullName>
    <description>Used for flow criteria filter</description>
    <formula>TEXT(Product__r.Selectie_Producttype__c )</formula>
    <label>Selectie Producttype</label>
    <type>Text</type>
</CustomField>