force-app/main/default/objects/Wasserij_item__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>