force-app/main/default/objects/Wasserij_item__c/fields/Soort__c.field-meta.xml
<CustomField>
    <fullName>Soort__c</fullName>
    <label>Soort</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Fauteuil</fullName>
            </value>
            <value>
                <fullName>Eetkamerstoel</fullName>
            </value>
            <value>
                <fullName>Stoel</fullName>
            </value>
            <value>
                <fullName>Kussen</fullName>
            </value>
            <value>
                <fullName>Hocker</fullName>
            </value>
            <value>
                <fullName>Afvoeren</fullName>
            </value>
            <value>
                <fullName>Opslagkosten</fullName>
            </value>
            <value>
                <fullName>Vlies Plus</fullName>
            </value>
            <value>
                <fullName>Profilo V</fullName>
            </value>
            <value>
                <fullName>Perzisch tapijt</fullName>
            </value>
            <value>
                <fullName>- Gabbeh</fullName>
            </value>
            <value>
                <fullName>- Nain</fullName>
            </value>
            <value>
                <fullName>Berber tapijt</fullName>
            </value>
            <value>
                <fullName>- Marokkaanse Berber</fullName>
            </value>
            <value>
                <fullName>Oosters tapijt</fullName>
            </value>
            <value>
                <fullName>- Ziegler tapijt</fullName>
            </value>
            <value>
                <fullName>- Nepal tapijt</fullName>
            </value>
            <value>
                <fullName>- Chinees tapijt</fullName>
            </value>
            <value>
                <fullName>- Afghaans tapijt</fullName>
            </value>
            <value>
                <fullName>- Pakistaans tapijt</fullName>
            </value>
            <value>
                <fullName>Kelim tapijt</fullName>
            </value>
            <value>
                <fullName>Synthetisch tapijt</fullName>
            </value>
            <value>
                <fullName>- Synthetisch Shaggy tapijt</fullName>
            </value>
            <value>
                <fullName>- Synthetisch kortpolig tapijt</fullName>
            </value>
            <value>
                <fullName>Bolletjes tapijt</fullName>
            </value>
            <value>
                <fullName>Groene / Antislip rug</fullName>
            </value>
            <value>
                <fullName>Handgetuft tapijt</fullName>
            </value>
            <value>
                <fullName>Hoogpolig tapijt</fullName>
            </value>
            <value>
                <fullName>India getuft tapijt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>