force-app/main/default/objects/Wasserij_item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niet afgeleverd</fullName>
            </value>
            <value>
                <fullName>Opgehaald</fullName>
            </value>
            <value>
                <fullName>Geannuleerd</fullName>
            </value>
            <value>
                <fullName>Klaar voor Voorinspectie</fullName>
            </value>
            <value>
                <fullName>In Vriezer</fullName>
            </value>
            <value>
                <fullName>Klaar voor Kloppen</fullName>
            </value>
            <value>
                <fullName>Klaar voor Reinigen</fullName>
            </value>
            <value>
                <fullName>Drogen</fullName>
            </value>
            <value>
                <fullName>Randen Plakken</fullName>
            </value>
            <value>
                <fullName>In Reparatie</fullName>
            </value>
            <value>
                <fullName>In Nabehandeling</fullName>
            </value>
            <value>
                <fullName>Ingepakt</fullName>
            </value>
            <value>
                <fullName>Klaargelegd</fullName>
            </value>
            <value>
                <fullName>In bus</fullName>
            </value>
            <value>
                <fullName>Afgeleverd</fullName>
            </value>
            <value>
                <fullName>In Reparatie EX</fullName>
                <isActive>false</isActive>
                <label>In Reparatie EX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>