force-app/main/default/objects/Wasserij_item__c/fields/Toeslag__c.field-meta.xml
<CustomField>
    <fullName>Toeslag__c</fullName>
    <inlineHelpText>Kleden met zijde hebben een toeslag van 25%.</inlineHelpText>
    <label>Toeslag %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>