force-app/main/default/objects/Wasserij_item__c/fields/Toeslag_bedrag__c.field-meta.xml
<CustomField>
    <fullName>Toeslag_bedrag__c</fullName>
    <label>Toeslag bedrag</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>